@@ -1105,3 +1105,9 @@ Added test.
 Added tests for different command-line search scenarios.
 Minor tweaks to the docs.
 
+
+*****  Thu Apr 11 22:23:35 CEST 2019  *****
+
+Added tests for am.manager() function.
+Added more entries for reqs decorator.
+
